Perform spell check

--- a/management/costs.tex
+++ b/management/costs.tex
@@ -36,4 +36,4 @@ The last items ordered were some Velcro tape and some masking tape. This were re
 	\label{table: 1}
 \end{table}
 
-So, the total cost of our project reached just a bit over £90, which is less then 50\% of the allocated budget,  the use of the allocated funds was used efficiently. The plan regarding the budget was made up by taking into consideration the fact that one of the hardware components could be defective or it could simply break at some point in the project due to unforeseen circumstances. Even if these events would occur, the team would still be able to buy atleast one of each of the hardware parts required to complete our tasks.
+So, the total cost of our project reached just a bit over £90, which is less than 50\% of the allocated budget,  the use of the allocated funds was used efficiently. The plan regarding the budget was made up by taking into consideration the fact that one of the hardware components could be defective or it could simply break at some point in the project due to unforeseen circumstances. Even if these events would occur, the team would still be able to buy at least one of each of the hardware parts required to complete our tasks.
