--- a/management/planning.tex
+++ b/management/planning.tex
@@ -18,4 +18,4 @@ As with all projects, external factors meant the team were not able to fully sti
 
 A second unexpected factor is that it took the group longer to agree with the supervisors which platform should be used: the FPGA or the mBed. After a meeting with the customer, the decision was made to use both the FPGA and the mBed. This meant the work on the hardware development was not able to be completed prior to the second progress seminar, as the start of hardware work had been delayed slightly by the discussion and the decision resulted in the hardware team being effectively split in half, leaving fewer people to work on each platform.
 
-Althought the team was able to recover from the two set backs detailed above, completing a working prototype in good time before the end of the project, the delays that these caused meant the group did not have time to complete the second movement study, and as such were not able to formally prove the effectiveness of the algorithm.
+Although the team was able to recover from the two setbacks detailed above, completing a working prototype in good time before the end of the project, the delays that these caused meant the group did not have time to complete the second movement study, and as such were not able to formally prove the effectiveness of the algorithm.
