--- a/management/tools.tex
+++ b/management/tools.tex
@@ -1,6 +1,6 @@
 \namedsection{Tools Used}{Shepherd}
 
-While regular meetings, both as a team and with the group's supervisors, are an essencial part of the project management process, it is also important to put in place a structure in which the members can communicate with each other throughout the week, and share work in an auditable fashion.
+While regular meetings, both as a team and with the group's supervisors, are an essential part of the project management process, it is also important to put in place a structure in which the members can communicate with each other throughout the week, and share work in an auditable fashion.
 
 \subsection{Communication}
 It was decided that the team should agree on a common platform on which to communicate with one another. As the majority of the team member run their own mail servers, and PGP keys which allow messages to be encrypted and signed, email was considered as a potentially secure and private option, especially considering some of ARM's System Verilog is under a non-public license. However, the group felt it was too unstructured to use and as such opted to use this only when large, one-off, files needed to be transferred between two people.
