--- a/results/algorithm.tex
+++ b/results/algorithm.tex
@@ -4,6 +4,6 @@ As discussed above, the team was not able to complete a second user study on the
 
 The team's early tests showed that the device is able to correctly identify a movement as exercise when the device was rotated in speed and fashion in accordance with the specifications. However, some team members found the device harder to use than others, suggesting that it may be too well trained to the `perfect' form of exercise. Should the device be developed further, it may aid its usability to address this drawback.
 
-It also appears that the device's accuracy is affected by its angle on the foot to a far higher degree than the team were expecting - as such, when held flat and the exercises are performed in the hand, the accuracy is much higher than when it is attached to the foot. The angle is, perhaps, an factor which should be given greater weight when training models in the future.
+It also appears that the device's accuracy is affected by its angle on the foot to a far higher degree than the team were expecting - as such, when held flat and the exercises are performed in the hand, the accuracy is much higher than when it is attached to the foot. The angle is, perhaps, a factor which should be given greater weight when training models in the future.
 
 We have found that the device's ability to ignore false positives is reassuringly high; to test this, members wore the sensor both during `random' foot movements, and during walking, neither yielding sustained exercise classifications. When exercise was detected incorrectly, this tended to be for short instants, making the likelihood of confusing an end user very low. The short time associated with mis classifications could also be used as a factor for more advanced heuristics to be added in the future, rather than requiring substantial amendments to the underlying classification code or model.
