--- a/results/results.tex
+++ b/results/results.tex
@@ -1,6 +1,6 @@
 \chapter{Results}\label{chap:results}
 
-We have seen the methods that were used to research and train a neural network capable of recognising exercise, and then the work to implement this into a program capable of running on a Cortex-M0, which was developed to act as a emulation platform for the proposed sub-threshold device. This chapter evaluates the outcomes of this work, highlighting the successes that have been made, and analysing where further development may be required.
+We have seen the methods that were used to research and train a neural network capable of recognising exercise, and then the work to implement this into a program capable of running on a Cortex-M0, which was developed to act as an emulation platform for the proposed sub-threshold device. This chapter evaluates the outcomes of this work, highlighting the successes that have been made, and analysing where further development may be required.
 
 \input{results/algorithm}
 \input{results/size}
