--- a/report.tex
+++ b/report.tex
@@ -101,6 +101,7 @@
 	\appendix
 	\input{appendices/brief}
 	\input{appendices/email}
+	\input{appendices/ucf}
 	\input{appendices/source}
 	\input{appendices/risks}
 	\input{appendices/gantt}
