--- a/embedded/emulation/fpga.tex
+++ b/embedded/emulation/fpga.tex
@@ -6,7 +6,7 @@ The two devices we are using, the FPGA and the microcontroller, are two very dif
 
 FPGAs are different in this sense. The circuit is completely designed by the programmer. The processor must be created and can be as simple as an and gate or can be our Cortex M0+. HDL is used to write the design, which is then synthesized into a bit file which configures the FPGA. One small problem with this is the fact that it stores the configuration in the RAM, so once the power is gone, the configuration is lost.
 
-The board used for this project is the Xilinx Digilent Nexys4, which can be seen in figure \ref{fig:nexys4} above. It is based on the Artix-7 that has the lowest power consumption at 28nm and is optimized to give the design the highest performance \cite{cortexm0onnexys4}. Implementations were also successful on low end FPGAs. We chose this board because it is a large, high-capacity FPGA board that would be sufficient for our project. Another reason is the fact that is has several built in peripherals, such as accelerometer, which would be useful for the exercise detection. 
+The board used for this project is the Xilinx Digilent Nexys4, which can be seen in figure \ref{fig:nexys4}. It is based on the Artix-7 that has the lowest power consumption at 28nm and is optimized to give the design the highest performance \cite{cortexm0onnexys4}. Implementations were also successful on low end FPGAs. We chose this board because it is a large, high-capacity FPGA board that would be sufficient for our project. Another reason is the fact that is has several built in peripherals, such as accelerometer, which would be useful for the exercise detection. 
 
 \begin{figure}
 \centering
