--- a/management/costs.tex
+++ b/management/costs.tex
@@ -1,7 +1,7 @@
 \namedsection{Component costs}{Pasat}
 In this section, the breakdown of the costs of our project will be presented. Our team's project budget was 200 pounds from which we needed to procure all of the required hardware for the project. As a budget holder, I was responsible of having the final word on the ordering of components, judging by their utility in our project. Decisions needed to be made to order all the components in as less deliveries as possible in order to avoid useless delivery fees. The components ordered from various suppliers can be seen below in table \ref{table: 1}. In order to find all of the required items, three different suppliers were used: Active Robots, Onecall (Marketplace) and RS Components Ltd (MarketPlace).
 
-So, the main hardware required for our project is the mbed NXP LPC11U24, which is low-cost 32-bit ARM Cortex-M0 base. This is great for rapid prototyping and due to the fact that it contains a built-in USB FLASH programmer, it offers access to various libraries online and to the mBed Online Compiler. Also, due to the  reduced cost compared to other hardware devices, this was the best choice for our project and the team decided that we should get it. 
+So, the main hardware required for our project is the mbed NXP LPC11U24, which is low-cost 32-bit ARM Cortex-M0+ based device. This is great for rapid prototyping and due to the fact that it contains a built-in USB FLASH programmer, it offers access to various libraries online and to the mBed Online Compiler. Also, due to the  reduced cost compared to other hardware devices, this was the best choice for our project and the team decided that we should get it. 
 
 Next, another vital component from our project is the Xadow - IMU 6DOF, which is our motion tracking module. We decided to buy this component after an extensive components which can be seen in the Component Research section. To resume it, the fact that it contained both a 3-axis gyroscope and a 3-axis accelerometer, a low working voltage and current consumption, small dimensions and the through-hole mounting type, this was our team's sensor choice. Also, the price of the component was very advantageous. The SD/MMC Card Breakout was procured because our initial plan for this device was to store the data it records from the users and use it in order to improve the exercise recognition pattern and for other general debugging information. The BH322-1A  HOLDER along with an AA 10 pack were bought because in order to give the device portability since it will not be powered by a PC or plug. The fact that the battery holder is made out of plastic also deceased the total weight of the device.
 
